--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,15 @@
      a:hover {
          color: #e1c184
      }
+     
+     h3 {
+         text-transform: uppercase;
+         text-align: center;
+         color: #e1c184;
+         font-size: 18px;
+         padding-top: 40px;
+         padding-bottom: 15px;
+     }
      /*Hearder*/
      
      header {
@@ -87,15 +96,6 @@
          font-size: 18px;
      }
      /*About Me*/
-     
-     #about .container h3 {
-         text-transform: uppercase;
-         text-align: center;
-         color: #e1c184;
-         font-size: 18px;
-         padding-top: 40px;
-         padding-bottom: 15px;
-     }
      
      #about .container .icons {
          max-width: 780px;
@@ -267,7 +267,7 @@
          right: 0;
      }
      
-     strong {
+     #work strong {
          display: block;
          padding: 0 20px;
          color: #ffffff;
@@ -289,6 +289,128 @@
          display: flex;
          align-items: center;
          justify-content: space-around;
+     }
+     /* Clients */
+     
+     .section-clients {
+         position: relative;
+     }
+     
+     .clients-belt {
+         width: 100%;
+         position: relative;
+     }
+     
+     .client-unit {
+         max-width: 700px;
+         margin: 0 auto 50px;
+         display: flex;
+     }
+     
+     .client-pic {
+         max-width: 300px;
+         text-align: center;
+     }
+     
+     .client-pic img {
+         max-width: 128px;
+         border-radius: 50%;
+     }
+     
+     .client-title {
+         font-size: 12px;
+         color: #cccccc;
+     }
+     
+     .client-name {
+         display: block;
+         color: #999999;
+         text-transform: uppercase;
+     }
+     
+     .client-info {
+         font-size: 16px;
+         line-height: 36px;
+         text-align: left;
+         padding-left: 10px;
+         margin-left: 30px;
+         margin-right: 30px;
+         color: #999999;
+     }
+     
+     .clients-logos {
+         position: relative;
+         max-width: 750px;
+         margin: 0 auto 100px;
+         display: flex;
+         align-items: center;
+         justify-content: space-around;
+     }
+     
+     .client-logo-1 {
+         height: 80px;
+         min-width: 200px;
+         background: url('../../portfolio/images/logo1.jpg') no-repeat;
+         background-size: contain;
+         background-position: center;
+     }
+     
+     .client-logo-2 {
+         height: 80px;
+         min-width: 200px;
+         background: url('../../portfolio/images/logo2.jpg') no-repeat;
+         background-size: contain;
+         background-position: center;
+     }
+     
+     .client-logo-3 {
+         height: 80px;
+         min-width: 200px;
+         background: url('../../portfolio/images/logo3.png') no-repeat;
+         background-size: contain;
+         background-position: center;
+     }
+     
+     .client-logo-4 {
+         height: 80px;
+         min-width: 200px;
+         background: url('../../portfolio/images/logo4.png') no-repeat;
+         background-size: contain;
+         background-position: center;
+         cursor: pointer;
+         margin: 0 20px;
+     }
+     
+     .active-client {
+         box-shadow: 0px 4px 0px;
+         color: #b49a69;
+     }
+     
+     .client-controls {
+         position: absolute;
+         width: 100%;
+         margin-top: 80px;
+     }
+     
+     .client-controls img {
+         width: 40px;
+         height: 80px;
+     }
+     
+     .client-control-next {
+         width: 40px;
+         height: 40px;
+         position: absolute;
+         top: 50%;
+         right: 10px;
+     }
+     
+     .client-control-previous {
+         width: 40px;
+         height: 40px;
+         position: absolute;
+         top: 50%;
+         left: 10px;
      }
      /* Foorter */
      
